removed placeholder from incident details form

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contacts-details-panel/contacts-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/contacts-details-panel/contacts-details-panel.component.html
@@ -23,13 +23,13 @@
           <div class="field size-third">
             <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
               <mat-label class="label required">Phone Number</mat-label>
-              <input matInput type="text" placeholder="Phone Number" formControlName="phoneNumber">
+              <input matInput type="text" formControlName="phoneNumber">
             </mat-form-field>
           </div>
           <div class="field size-third" >
             <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
               <mat-label class="label required">Email Address</mat-label>
-              <input matInput type="text" placeholder="Email Address" formControlName="emailAddress">
+              <input matInput type="text" formControlName="emailAddress">
             </mat-form-field>
           </div>
         </div>
