--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -6,13 +6,13 @@
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label">Fire Name</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Fire Name" formControlName="incidentNumberSequence" disabled>
+            <input matInput class="disabled-input" type="text" formControlName="incidentNumberSequence" disabled>
           </mat-form-field>
         </div>
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label">Traditional Territory</mat-label>
-            <input matInput type="text" placeholder="Traditional Territory" formControlName="traditionalTerritory">
+            <input matInput type="text" formControlName="traditionalTerritory">
           </mat-form-field>
         </div>
         <div class="field size-third radio-checkbox-group">
@@ -26,7 +26,7 @@
         <div class="field size-full">
           <mat-form-field class="item-full-width" appearance="outline" floatLabel="always">
             <mat-label class="label required">Location</mat-label>
-            <input matInput type="text" placeholder="location" formControlName="geographicDescription">
+            <input matInput type="text" formControlName="geographicDescription">
           </mat-form-field>
         </div>
       </div>
@@ -39,13 +39,13 @@
         <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label">Size Type</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Size Type" formControlName="sizeType" disabled>
+            <input matInput class="disabled-input" type="text" formControlName="sizeType" disabled>
           </mat-form-field>
         </div>
         <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label">Size</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Size" formControlName="sizeHectares" disabled>
+            <input matInput class="disabled-input" type="text" formControlName="sizeHectares" disabled>
           </mat-form-field>
         </div>
         <div class="field size-full">
@@ -69,7 +69,7 @@
         <div class="field size-third">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label required">Cause</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Cause" formControlName="cause" disabled>
+            <input matInput class="disabled-input" type="text" formControlName="cause" disabled>
           </mat-form-field>
         </div>
         <div class="field size-full">
