--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
@@ -9,13 +9,13 @@
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label required">Area Restriction Name</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Area Restriction Name" [value]="item.name" disabled>
+            <input matInput class="disabled-input" type="text" [value]="item.name" disabled>
           </mat-form-field>
         </div>
         <div class="field size-two-thirds">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
             <mat-label class="label">Information Bulletin URL</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Information Bulletin URL" [value]="item.bulletinUrl" disabled>
+            <input matInput class="disabled-input" type="text" [value]="item.bulletinUrl" disabled>
           </mat-form-field>
         </div>
       </div>
