Add lightgallery, all fires stats demo

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -118,9 +118,11 @@ mat-tab-group {
   .info-text {
     padding: 5px;
     width: 45%;
+    height: 500px;
   }
   .info-chart {
     padding: 5px;
     width: 45%;
+    height: 500px;
   }
 }
