Add weather layer, popup

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.html
@@ -1,3 +1,5 @@
 <div class="map-container">
     <div #mapContainer class="smk-map-frame"></div>
 </div>
+
+<ng-template #identifyContainer></ng-template>
