--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -11,6 +11,7 @@ mat-tab-group {
   overflow: hidden;
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   padding: 20px;
+  max-width: 1090px;
   h2 {
     font-size: 24px;
     font-weight: normal;
