--- a/client/wfnews-war/src/main/angular/src/app/components/weather-panel/weather-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/weather-panel/weather-panel.component.html
@@ -2,10 +2,7 @@
   <mat-tab label="Readings">
     <div class="smk-popup">
       <div class="popup-header">
-        <mat-icon role="img" class="mat-icon notranslate mat-primary" aria-hidden="true" ng-reflect-svg-icon="map-signs" data-mat-icon-type="svg" data-mat-icon-name="map-signs">
-          <svg style="color: #1a5a96" width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fit="" preserveAspectRatio="xMidYMid meet" focusable="false"><path d="M1745 297q10 10 10 23t-10 23l-141 141q-28 28-68 28h-1344q-26 0-45-19t-19-45v-256q0-26 19-45t45-19h576v-64q0-26 19-45t45-19h128q26 0 45 19t19 45v64h512q40 0 68 28zm-977 919h256v512q0 26-19 45t-45 19h-128q-26 0-45-19t-19-45v-512zm832-448q26 0 45 19t19 45v256q0 26-19 45t-45 19h-1344q-40 0-68-28l-141-141q-10-10-10-23t10-23l141-141q28-28 68-28h512v-192h256v192h576z"></path></svg>
-        </mat-icon>
-        <span class="title-label">Current Weather ({{hourly.hour}})</span>
+        <span>Current Weather ({{convertName(hourly.hour)}})</span>
       </div>
       <div class="popup-title">{{stationData.stationName}}</div>
       <div class="popup-attributes">
