Use shared tab format

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <mat-tab-group [(selectedIndex)]="tabIndex">
+    <mat-tab-group [(selectedIndex)]="tabIndex" class="wildfires-tabs" mat-align-tabs="center">
       <mat-tab label="Active Fires">
       </mat-tab>
       <mat-tab label="Fires This Year">
