--- a/client/wfnews-war/src/main/angular/src/app/components/weather-panel/weather-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/weather-panel/weather-panel.component.html
@@ -2,7 +2,7 @@
   <mat-tab label="Readings">
     <div class="smk-popup">
       <div class="popup-header">
-        <span>Current Weather ({{convertName(hourly.hour)}})</span>
+        <span>Current Weather ({{convertName(hourly.hour)}} PST)</span>
       </div>
       <div class="popup-title">{{stationData.stationName}}</div>
       <div class="popup-attributes">
