WFNEWS-439: Add weather station layer, popup (#171)
* Add weather layer, popup

* Remove icon

* Remove unused near me interfaces

We can bring them back if we need them

* Clean sonar issues

* Use shared tab format

* PST label

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.scss
@@ -2,6 +2,36 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
+::ng-deep .wildfires-tabs {
+  .mat-tab-labels {
+      padding-bottom: 5px;
+  }
+  .mat-tab-header {
+   border-bottom: none;
+  }
+  .mat-tab-label.mat-tab-label-active {
+      border-radius: 40px;
+      background-color:#1a5a96;
+      color:white !important;
+      opacity: 1;
+      font-weight: 700;
+  }
+  .mat-tab-label {
+      opacity: 1;
+      color: #1a5a96;
+      height: 36px;
+      min-width: 100px;
+      font-size: 15px;
+      border-style: solid;
+      border-radius: 40px;
+      border-width: 1px;
+      margin-right: 10px;
+  }
+  .mat-ink-bar{
+      background-color: white !important
+  }
+}
+
 mat-tab-group {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
 }
