--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -67,7 +67,7 @@
         <div class="wildfire-list-toggle-title">Choose Wildfires to display</div>
         <div class="wildfire-checkboxs">
             <mat-checkbox>Active Wildfires</mat-checkbox>
-            <mat-checkbox>Wildfires of Note</mat-checkbox>
+            <mat-checkbox>Only Wildfires of Note</mat-checkbox>
             <mat-checkbox>Wildfires that are 'Out'</mat-checkbox>
         </div>
     </mat-tab>
