spacing between tabs wfnews-485

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -24,6 +24,7 @@
         border-style: solid;
         border-radius: 40px;
         border-width: 1px;
+        margin-left: 24px
     }
     .mat-ink-bar{
         background-color: white !important
