--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
@@ -1,8 +1,8 @@
 .image-panel {
   display: flex;
-  padding: 16px;
+  padding: 0 1rem;
   width: 650px;
-  margin: 16px;
+  margin: 0 1rem;
 
   .image-container {
     width: 60%;
@@ -28,9 +28,10 @@
     }
 
     .action {
-      padding-top: 5px;
+      padding: 5px 0;
       mat-icon {
         cursor: pointer;
+        font-size: 20px
       }
     }
 
