Update weather incident text

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-road-conditions/panel-road-conditions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-road-conditions/panel-road-conditions.component.html
@@ -20,7 +20,7 @@
       </p>
       <h2 class="weather-conditions">Weather Conditions</h2>
       <p class="paragraph-format">
-        Incidents affecting traffic such as a stalled vehicle, hydro lines down or a collision.
+        Environment Canada Weather warnings and forecast information for a specific location.
       </p>
       <h2 class="major-severity-event">Major Severity - Events or Incidents</h2>
       <p class="paragraph-format"></p>
