--- a/client/wfnews-war/src/main/angular/src/styles/_variables.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $colour-lighter-yellow: #f9f9cd;
 $colour-black: #000000;
 $colour-red: #ff4545;
 $colour-green: #009e73;
-$colour-blue: #0600FF;
+$colour-blue: #003366;
 $colour-white: #ffffff;
 $colour-errors: #f44336;
 $colour-warnings: orange;
@@ -63,6 +63,8 @@ $colour-sidebar-filter-background: $colour-white;
 $colour-header-background: #003366;
 
 $colour-success: #2E7940;
+$colour-button-primary: $colour-blue;
+
 
 /**
  Spacing Variables
