--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -93,47 +93,47 @@
             aria-label="Incident Table">
         <ng-container matColumnDef = "fireName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Name</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" ><span #el >{{item.incidentName}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentName}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "fireNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Number</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.incidentNumberLabel}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentNumberLabel}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "lastUpdated">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Updated</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.lastUpdatedTimestamp}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.lastUpdatedTimestamp}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "stageOfControl">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Stage of Control</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.stageOfControlCode}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.stageOfControlCode}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "wildfireOfNote">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Wildfire of Note</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" ><span #el >{{item.fireOfNoteInd? 'Yes' : 'No'}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.fireOfNoteInd? 'Yes' : 'No'}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "fireCentre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Centre</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" ><span #el >{{item.contactOrgUnitIdentifer}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.contactOrgUnitIdentifer}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "location">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Location</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" [matTooltip]="convertToDate(item.discoveryTimestamp)"><span #el >{{item.incidentLocation}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentLocation}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "addToWatchlist">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Add to Watchlist</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" [matTooltip]="convertToDate(item.discoveryTimestamp)"><span #el ><mat-icon style="color:#1A5A96" svgIcon="bookmark"></mat-icon></span></td>
+            <th mat-header-cell *matHeaderCellDef> Add to Watchlist</th>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="addToWatchlist(item)"><span #el ><mat-icon style="color:#1A5A96" svgIcon="bookmark"></mat-icon></span></td>
         </ng-container>
 
         <ng-container matColumnDef = "viewMap">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> View Map</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item" [matTooltip]="convertToDate(item.discoveryTimestamp)"><span #el ><mat-icon style="color:#1A5A96" svgIcon="map"></mat-icon></span></td>
+            <th mat-header-cell *matHeaderCellDef> View Map</th>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="viewMap(item)"><span #el ><mat-icon style="color:#1A5A96" svgIcon="map"></mat-icon></span></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky:true"></tr>
