--- a/client/wfnews-war/src/main/angular/src/styles/_variables.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $opacity-grey: rgba(0, 0, 0, 0.13);
 $opacity-dark-grey: rgba(0, 0, 0, 0.54);
 $background-color: $opacity-grey;
 $colour-dark-grey: #263238;
-$colour-medium-grey: #7d7d7d;
+$colour-medium-grey: #d7d7d7;
 $colour-light-grey: #a7a9ac;
 $colour-toolbar-grey: #bdbdbd;
 $colour-yellow: #e69f00;
