non-complainces about admin-table

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
@@ -71,3 +71,23 @@ table tr:nth-child(even) td{
         }
     }
 }
+
+.mat-column-fireNumber {
+    width: 20%;
+}
+
+.mat-column-fireName {
+    width: 20%;
+}
+
+.mat-column-fireCentre {
+    width: 20%;
+}
+
+.mat-column-wildFireOfNote {
+    width: 20%;
+}
+
+.mat-column-lastPublished {
+    width: 20%;
+}
