add ngModel for <Select>

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -111,7 +111,8 @@
                 [position]="'top'"
                 [selected]="showEntriesSelection"
                 [options]="showEntriesOptions"
-                (updated)="selectShowEntriesUpdated('showEntriesSelection', $event)">
+                (updated)="selectShowEntriesUpdated('showEntriesSelection', $event)"
+                [(ngModel)]="showEntriesSelection">
             <option *ngFor="let option of showEntriesOptions" value="{{option.value}}">
                 <span>{{option.label}}</span>
             </option>
